#373 closed bug (fixed)
incorrect repainting of background color when switching workspaces.
Reported by: | Owned by: | axeld | |
---|---|---|---|
Priority: | low | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This occurs when workspaces have different background colors. changing from one to the other will retain the painted areas of the first.
steps to reproduce: change the color of the current workspace. stimulate repainting by doing anything that will create a new graphical element --- such as opening a new GUI app, accessing the Deskbar's menu, eg. switch to a workspace with a different color.
unable to test with background images.
noticed in hrev16943 unknown if it occurs in earlier revisions.
Change History (3)
comment:1 by , 19 years ago
Resolution: | → fixed |
---|
comment:2 by , 19 years ago
Status: | new → closed |
---|
comment:3 by , 19 years ago
Note:
See TracTickets
for help on using tickets.
Fixed in hrev16979.