* The background is now repainted on workspace switch in case the background   color differs. This fixes bug #373. * The workspaces window is now invalidated when the workspace color is   changed, so that it shows the correct color then.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16979 a95241bf-73f2-0310-859d-f6bbb57e9c96